# My-Pregnancy

./: .pre-commit-config.yaml  LICENSE  README.md  task-definition.json
backend/: .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  pg_dump.txt  pyproject.toml  requirements.txt
backend/SQL/: MetricOptionsAndCategory.SQL
backend/app/: db_config.py  db_schema.py  main.py  schema.py  schemas.py
backend/app/core/: aws_clients.py  custom_base_model.py  db_config.py  exceptions.py  password_hasher_config.py  security.py  settings.py  users.py  users_manager.py
backend/app/db/: db_config.py  db_schema.py  nuke_db.py
backend/app/db/seeding/: nuke_db.py  seed_db.py  seed_db_base.py  seed_db_dev.py  seed_db_tests.py
backend/app/entities/educational_articles/: edu_article_models.py  edu_articles_router.py
backend/app/entities/items/: items_router.py
backend/app/exceptions/: general_exceptions.py
backend/app/features/: misc_routes.py
backend/app/seeding/: seed_db.py
backend/app/shared/: S3StorageInterface.py  s3_storage_interface.py  utils.py
backend/migrations/: env.py
backend/migrations/versions/: 19ab27d3ae36_initial_revision.py  23f29fb8eaee_yet_another_descriptive_migration.py  2428b96644ca_initial_migration.py  2b8ce6f11aac_initial_revision.py  318ac396f122_initial_migration.py  359831da2ee7_added_commented_at_datetime_field_for_.py  36dc78c86f3a_added_initial_tables.py  37c4e746414e_initial_revision.py  42597e63d408_initial_revision.py  4749908a2864_removed_is_anonymous_from_user_feedback_.py  523ab2920d18_initial_revision.py  57a81be96668_initial_revision.py  5b51b0ac06f6_modification_to_have_2_types_of_metrics.py  6f589e46284c_initial_migration.py  7f6ab90db1c1_initial_revision.py  8042c4d8a60f_added_uniqueness_constraint_for_.py  892cf78f9808_initial_revision.py  91a1d8717ec7_added_in_content_field_for_user_.py  9b056117d6bb_initial_migration.py  adb7b79316b6_initial_migration.py  b6dbb64cc835_fixed_composite_primary_key_for_saved_.py  b7ce8b5e54fe_initial_revision.py  c12c86058af3_initial_revision.py  c51b55a720ab_initial_revision.py  c74e78786234_initial_revision.py  ca7f1e289e7b_initial_migration.py  de7b0922b9a6_fixed_schema_for_scalar_metrics.py  e3f64d9b4133_removed_logged_at_from_metric_logs_it_.py  e70b6602c503_my_first_revision.py  f1533bf98f23_initial_revision.py  f6be5ed556e6_initial_migration.py  fedb5071bb81_added_push_tokens_some_cleanup.py
backend/my-localstack-data/s3/: store.json
backend/scripts/: seed_db.py
backend/scripts/SQL/: MyPregnancy DB.session.sql
backend/scripts/aws/: init-localstack.sh
backend/tests/: conftest.py  example_test.py  test_account_creation_request_routes.py  test_appointment_routes.py  test_auth_routes.py  test_edu_article_routes.py  test_journal_routes.py
(+147 files in other folders)
